--- a/login.html
+++ b/login.html
@@ -1,6 +1,10 @@
 <html>
 	<head>
 		<title>So awesome</title>
+		
+		<link rel="stylesheet" type="text/css" href="login.css">
+		<script src="login.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	</head>
 	
 	<body>
