added basic login form

--- a/login.html
+++ b/login.html
@@ -8,5 +8,13 @@
 	</head>
 	
 	<body>
+	
+		<div class="login-box">
+			<form>
+				<input type="text" placeholder="username" id="uname">
+				<input type="text" placeholder="password" id="pwd">
+				<input type="submit" value="Login"/>
+			</form>
+		</div>
 	</body>
 </html>
