added onclick event for submit button

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 			<form>
 				<input type="text" placeholder="username" id="uname">
 				<input type="text" placeholder="password" id="pwd">
-				<input type="submit" value="Login"/>
+				<input type="submit" value="Login" onclick="login()">
 			</form>
 		</div>
 	</body>
